# based on https://packaging.python.org/tutorials/packaging-projects/ as of March 2022

[metadata]
name = aoc2022
version = attr: aoc.y2022.__version__
author = Ryan Crawford
author_email = rcrawford@exptechinc.com
description = Solutions to the 2022 Advent of Code competition.
long_description = file: README.md
long_description_content_type = text/markdown
url = NA
project_urls =
    Bug Tracker = NA
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
# TODO: edit this list based on your package needs!
install_requires =
    numpy
    black
    pylint
    isort

package_dir =
    = .
packages = find_namespace:
python_requires = >=3.8


[options.extras_require]
test =
    pylint
    pytest
    pytest-cov

[options.packages.find]
include =
    aoc.y2022
    aoc.y2022.*

[options.entry_points]
console_scripts =
  run_day0 = aoc.y2022.day0:main
  run_day1 = aoc.y2022.day1:main
  run_day2 = aoc.y2022.day2:main
  run_day3 = aoc.y2022.day3:main
  run_day4 = aoc.y2022.day4:main
  run_day5 = aoc.y2022.day5:main
  run_day6 = aoc.y2022.day6:main
  run_day7 = aoc.y2022.day7:main
  run_day8 = aoc.y2022.day8:main
  run_day9 = aoc.y2022.day9:main
  run_day10 = aoc.y2022.day10:main
  run_day12 = aoc.y2022.day12:main
  run_day11 = aoc.y2022.day11:main
  run_day13 = aoc.y2022.day13:main
  run_day14 = aoc.y2022.day14:main
  run_day15 = aoc.y2022.day15:main
  run_day16 = aoc.y2022.day16:main
  run_day17 = aoc.y2022.day17:main
  run_day18 = aoc.y2022.day18:main
  run_day19 = aoc.y2022.day19:main
  run_day20 = aoc.y2022.day20:main
  run_day21 = aoc.y2022.day21:main
  run_day22 = aoc.y2022.day22:main
  run_day23 = aoc.y2022.day23:main
  run_day24 = aoc.y2022.day24:main
  run_day25 = aoc.y2022.day25:main
  run_score = aoc.y2022.score:main
